<resources>
    <string name="app_name">2048</string>
    <string name="score">Score</string>
    <string name="temp">none</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="new_game">New Game</string>
    <string name="continue_btn">Continue</string>
    <string name="settings">Settings</string>
    <string name="setting_1">Hide buttons</string>
    <string name="your_high_score">Your highest score is: %d</string>
    <string name="setting_2">Old textures</string>
    <string name="on_2048_message">The goal in 2048 has been reached. You can end the game or continue.</string>
    <string name="continue_toast">Continue!</string>
    <string name="main_menu">Main menu</string>
    <string name="game_over_message">Game over, no moves left.</string>
    <string name="game_over">Game over!</string>
    <string name="finish">Finish</string>
    <string name="loading">Loading…</string>
    <string name="leaderboard_results">You are in %d place out of %d</string>
</resources>