<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.PGgames.a2048.GameActivity">

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/temp"
        android:textAlignment="center"
        android:textSize="20pt"
        app:layout_constraintBottom_toTopOf="@id/game_board"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/game_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="4"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/btn_u"
        app:layout_constraintTop_toTopOf="@id/score"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/cell_1_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/cell_1_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_1_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_1_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_2_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_2_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_2_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_2_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_3_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_3_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_3_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_3_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_4_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_4_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_4_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/cell_4_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
    </GridLayout>

    <Button
        android:id="@+id/btn_u"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="btn_up_click"
        android:text="@string/up"
        app:layout_constraintTop_toBottomOf="@+id/game_board" />

    <Button
        android:id="@+id/btn_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btn_left_click"
        android:text="@string/left"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/btn_d"
        app:layout_constraintEnd_toStartOf="@id/btn_r"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_u" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:onClick="btn_right_click"
        android:text="@string/right"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/btn_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_l" />

    <Button
        android:id="@+id/btn_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btn_down_click"
        android:text="@string/down"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img_no_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/no_buttons_img"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_board"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>